week9/thursday/kk-payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kk-payments
  annotations:
    kubernetes.io/change-cause: "Add readiness/liveness probes and resource limits"
  labels:
    app: kk-payments
    week: "9"

spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kk-payments

  template:
    metadata:
      labels:
        app: kk-payments
        version: "1.0.0"

    spec:
      imagePullSecrets:
        - name: kijani-registry-credentials

      containers:
        - name: kk-payments
          image: lewis0648/kk-payments:1.1.0-1da0173

          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
