week9/thursday/kk-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-payments-service
  labels:
    app: kk-payments
spec:
  type: ClusterIP
  selector:
    app: kk-payments
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
