week9/thursday/kijani-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kijani-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: kijani.local
      http:
        paths:
          - path: /payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kk-payments-service
                port:
                  number: 3001

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kk-api
                port:
                  number: 8080
